add route pipes

--- a/src/app/components/Navbar/navbar.component.html
+++ b/src/app/components/Navbar/navbar.component.html
@@ -3,5 +3,8 @@
         <li>
             <a routerLink="/demos/bindings">Bindings</a>
         </li>
+        <li>
+            <a routerLink="/demos/pipes">Pipes</a>
+        </li>
     </ul>
 </nav>
