ajout correction chrono + demos directives

--- a/src/app/components/Navbar/navbar.component.html
+++ b/src/app/components/Navbar/navbar.component.html
@@ -6,5 +6,13 @@
         <li>
             <a routerLink="/demos/pipes">Pipes</a>
         </li>
+        <li>
+            <a routerLink="/demos/directives">Directives</a>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <a routerLink="/exos/chrono">Chrono</a>
+        </li>
     </ul>
 </nav>
